# GoG

./: .gitmodules  CLAUDE.md  README.md  pyproject.toml  reaction_diffusion_model.ipynb
model/: README_CONFIG.md  create_config.py  main.py  uvafme_config.json
model/input_data/: climate.csv  file_list.txt  sites.csv
model/output_data/: site_data.csv  soil_data.csv  species_data.csv
model/vegetation/: README_PYTHON.md  __init__.py  climate.py  compile.py  constants.py  csv_file.py  genus_groups.py  input_module.py  io_utils.py  model.py  output_module.py  parameters.py  plot.py  random_utils.py  site.py  sitelist.py  soil.py  species.py  test_basic.py  test_full_model.py  tree.py  utilities.py  uvafme.py  vararray.py
model/vegetation/input_data/: species.csv
model/vegetation/output_data/: Species_Data.csv  site_data.csv  soil_data.csv
model/vegetation/src/: Model.f90  Tree.f90  constants.mod  meson.build  parameters.mod
